# geekbrains_home_django_rest

./: .gitignore  README.md  package-lock.json  pyproject.toml
author/: admin.py  filters.py  managers.py  models.py  schema.py  serializers.py  tests.py  views.py
author/fixtures/: 0001_persone.json  0002_project.json  0003_todo.json
author/management/commands/: maketestdb.py  maketestusers.py
author/migrations/: 0001_initial.py
config/: settings.py  urls.py
docker/from_manual/: docker-compose.yml
docker/from_manual/backend/: .dockerignore  Dockerfile  entrypoint.sh
docker/from_manual/frontend/: Dockerfile  entrypoint.sh  nginx.conf
docker/from_manual/nginx/: Dockerfile  nginx.conf
frontend/: package-lock.json
frontend/src/: App.js  URL.js
frontend/src/components/: Auth.js  Author.js  Footer.js  Menu.js  Persone.js  Project.js  ProjectForm.js  Todo.js  TodoForm.js
