[tool.poetry]
name = "geekbrains-home-django-rest"
version = "0.0.0"
description = "Веб-сайт для работы с TODO-заметками"
authors = ["Vios <i.svoboda.vios@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "geekbrains_home_django_rest"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2"
djangorestframework = "^3.14.0"
Markdown = "^3.4.1"
django-filter = "^22.1"
django-cors-headers = "^3.13.0"
pylint = "^2.15.5"
djangorestframework-camel-case = "^1.3.0"
djangorestframework-simplejwt = "^5.2.2"
drf-yasg = "^1.21.4"


[tool.poetry.group.dev.dependencies]
jedi = "^0.18.1"
mixer = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
